# advent-of-code

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  README.md  mise.toml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
2015/day01/: part1.py  part2.py
2015/day02/: part1.py  part2.py  utils.py
2015/day03/: part1.py  part2.py
2015/day04/: part1.py  part2.py
2015/day05/: part1.py  utils.py
2015/day06/: part1.py  part2.py
2015/day1/: part1.py  part2.py
2015/day16/: part1.py  part2.py
2015/day2/: part2.py
2015/day3/: part1.py
2016/day03/: part1.py
2016/day05/: part1.py  part2.py
2016/day06/: part1.py  part2.py
2016/day08/: part1.py  part2.py
2017/day01/: part1.py  part2.py
2017/day04/: part1.py  part2.py
2017/day07/: part1.py
2017/day1/: part1.py
aoc/: README.md
dmoj/: README.md  a1.py  a2.py  a3.py  a4b1.py  acmtryouts0a.py  acmtryouts0b.py  acmtryouts1a.py  alphabetscore.py  aminusb.py  aplusb.py  art0.py  avatarearth.py  avatarwater.py  bf1.py  bfs17p1.py  catlove.py  ccc04j1.py  ccc04j3.py  ccc06j1.py  ccc07j1.py  ccc07j3.py  ccc08j1.py  ccc11j1.py  ccc12j1.py  ccc12j2.py  ccc13j1.py  ccc13j2.py  ccc14j1.py  ccc14j2.py  ccc15j1.py  ccc15j2.py  ccc16j1.py  ccc17j1.py  coci06c2p1.py  coci07c2p1.py  coci09c4p1.py  dmopc14c5p1.py  dmopc14c5p2.py  dmopc15c7p2.py  (+27 more)
exercism/: README.md  acronym.py  anagram.py  arcade_game.py  exchange.py  grains.py  hello_world.py  high_scores.py  lasagna.py  leap.py  matrix.py  pangram.py  phone_number.py  strings.py  two_fer.py
tests/: dmoj_data.py  test_dmoj.py
utils/: pyproject.toml
utils/bsoyka_aoc_utils/: __init__.py  bingo.py  lines.py  points.py
utils/src/: bingo.py  lines.py  points.py  rps.py
utils/tests/: test_point2d.py
(+231 files in other folders)
