[project]
name = "advent-of-code"
version = "0.1.0"
description = "Personal solutions to Advent of Code problems"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-ocr>=1.1.0",
    "bsoyka-aoc-utils",
    "loguru>=0.7.3",
    "regex>=2025.11.3",
]

[tool.uv.sources]
bsoyka-aoc-utils = { path = "utils", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.7",
]
